* Fixing aligment of filters for mobile (below 600px width). * Added sample cards to help with alignment comparrison.

--- a/.model/filters.css
+++ b/.model/filters.css
@@ -39,14 +39,14 @@
   position: relative;
 }
 
+.filter:first-child {
+  justify-content: start;
+}
+
 .filter:first-child:before {
   content: "Filters";
   display: inline-block;
   margin-right: 16px;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translate(10%, -10px);
 }
 
 .filter .dropdown {
